// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application actions applicationReady created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "APPLICATION_READY",
  },
]
`;

exports[`Application actions applicationStarted created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "APPLICATION_STARTED",
  },
]
`;
